[tool.poetry]
name = "boilerplate-python"
version = "0.1.0"
description = "Boilerplate Python project"
authors = ["Lucas Nery <lucasbeletatonery@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.27.0"

[build-system]
requires = ["poetry>=1.3.2"]
build-backend = "poetry.core.masonry.api"